--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
     "ng2-bootstrap": "^1.0.24",
+    "primeng": "^1.0.0-beta.11",
+    "primeui": "^4.1.14",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
