--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "angular-in-memory-web-api": "0.1.1",
-    "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
+    "bootstrap": "4.0.0-alpha.4",
+    "core-js": "^2.4.1",
     "moment": "^2.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.6",
     "ng2-bootstrap": "^1.1.5",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
